@@ -1,2 +1,2 @@
 postgresql-data-checksums.patch
-postgresql9.4.patch
+postgresql9.5.patch
