@@ -8,6 +8,8 @@ akonadi (4:15.12.0-0ubuntu1) UNRELEASED; urgency=medium
 
   [ Philip Muškovac ]
   * Merge with debian git master
+  * Add postgresql 9.5 support to postgresql9.4.patch and rename it to
+    postgresql9.5.patch 
 
  -- Clive Johnston <clivejo@aol.com>  Sat, 02 Jan 2016 13:29:44 +0000
 
